# file-converter

./: app.py  converters.py  main.py  pyproject.toml  requirements.py  requirements.txt  setup.py
attached_assets/: Pasted--Getting-requirements-to-build-wheel-finished-with-status-error-error-subprocess-exited-with--1750703003283_1750703003284.txt  Pasted-Create-a-Flask-based-file-conversion-web-app-compatible-with-Replit-with-the-following-features--1750647602625_1750647602626.txt  Pasted-Here-s-a-step-by-step-prompt-to-run-and-test-your-full-file-conversion-system-with-compressio-1750699264179_1750699264180.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
