[project]
name = "file-converter-app"
version = "1.0.0"
description = "Universal File Converter - Supporting 31+ conversion types including PDF, Images, Audio, Video & Documents"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=21.2.0",
    "werkzeug>=3.0.1",
    "psycopg2-binary>=2.9.9",
    "pillow>=10.1.0",
    "pymupdf>=1.23.8",
    "pdfkit>=1.0.0",
    "pdf2docx>=0.5.6",
    "reportlab>=4.0.7",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "pandas>=2.1.4",
    "ffmpeg-python>=0.2.0",
    "email-validator>=2.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
